# cpputils

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cpputils/: CMakeLists.txt  event.cpp  result.cpp
cpputils/ai/: behaviourtree.cpp
cpputils/include/cpputils/: any.hpp  concepts.hpp  event.hpp  export.hpp  nullable.hpp  result.hpp
cpputils/include/cpputils/ai/: behaviourtree.hpp  statemachine.hpp
tests/: CMakeLists.txt  any.cc  event.cc  nullable.cc  result.cc
tests/ai/: behaviourtree.cc  statemachine.cc
